--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,6 +13,7 @@
     "cross-env": "^7.0.3"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
     "axios": "^1.7.6",
     "form-data": "^4.0.0",
     "uuid": "^10.0.0"
